--- a/www/langs/custom.ru.json
+++ b/www/langs/custom.ru.json
@@ -1,125 +1,126 @@
 {
-    "tr-custom-packages": "Установленные пакеты",
-    "tr-custom-defaults": "Скрипт, выполняемый при первой загрузке (uci-defaults)",
-    "tr-postinst": "Postinst (скрипт установки пакета)",
-    "tr-uci": "UCI-defaults (скрипт конфигурации загрузки)",
-    "tr-package-search": "Поиск пакета",
-    "tr-add-commands": "Добавить команду",
-    "tr-base-size": "База",
-    "tr-added-size": "Добавлено",
-    "tr-total-size": "Всего",
-    "tr-package-size-snapshot-unavailable": "※ Информация о размере пакета недоступна для сборок SNAPSHOT",
-    "tr-package-size-note": "※ Не включает языковые и зависимые пакеты",
-    "tr-uci-size-limit": "※ Ограничение размера файла: 20480 байт: 20.00 КБ",
-    "tr-import-settings": "Импорт",
-    "tr-export-settings": "Экспорт",
-    "tr-extended-info": "Информация о регионе и ISP",
-    "tr-loading": "Загрузка…",
-    "tr-notice": "Уведомление",
-    "tr-country": "Область",
-    "tr-timezone": "Часовой пояс",
-    "tr-zonename": "Название зоны",
-    "tr-isp": "ISP",
-    "tr-as": "Номер AS",
-    "tr-ip-address": "Адрес",
-    "tr-method": "Метод",
-    "tr-basic-configuration": "Базовая конфигурация",
-    "tr-language": "Язык",
-    "tr-device-name": "Имя устройства",
-    "tr-root-password": "Пароль root",
-    "tr-lan-ipv4-address": "Адрес LAN IPv4",
-    "tr-lan-ipv6-address": "Адрес LAN IPv6",
-    "tr-ssh-interface": "SSH интерфейс",
-    "tr-ssh-port": "Порт SSH",
-    "tr-flow-offloading-type": "Тип разгрузки потока",
-    "tr-restore-backup-path": "Путь восстановления резервной копии",
-    "tr-wi-fi-configuration": "Конфигурация Wi-Fi",
-    "tr-wi-fi-mode": "Режим Wi-Fi",
-    "tr-wi-fi-ssid": "Wi-Fi SSID",
-    "tr-wi-fi-password": "Пароль Wi-Fi",
-    "tr-mobility-domain": "Домен мобильности",
-    "tr-min-snr": "Минимальный SNR",
-    "tr-standard": "Стандарт",
-    "tr-usteer": "Usteer",
-    "tr-disabled": "Отключено",
-    "tr-wifi-optimization-disabled": "Wi-Fi отключен",
-    "tr-internet-connection": "Интернет соединение",
-    "tr-connection-type": "Тип соединения",
-    "tr-auto": "Автоматический",
-    "tr-pppoe": "PPPoE",
-    "tr-dslite": "DS-Lite",
-    "tr-mape": "MAP-E",
-    "tr-ap": "Режим AP",
-    "tr-auto-detection": "Автоматическое обнаружение",
-    "tr-dhcp": "DHCP",
-    "tr-pppoe-credentials": "Учетные данные PPPoE",
-    "tr-pppoe-username": "Имя пользователя",
-    "tr-pppoe-password": "Пароль",
-    "tr-ds-lite-settings": "Параметры DS-Lite",
-    "tr-dslite-aftr-type": "Тип AFTR",
-    "tr-dslite-area": "Область",
-    "tr-dslite-aftr-ipv6-address": "Адрес AFTR",
-    "tr-dslite-notice1": "Примечание: фактические значения могут отличаться.",
-    "tr-mape-type": "Тип адреса",
-    "tr-br": "Адрес одноранговой сети (BR)",
-    "tr-ea-len": "Длина EA",
-    "tr-ipv4-prefix": "IPv4 адрес",
-    "tr-ipv4-prefix-length": "Длина префикса IPv4",
-    "tr-ipv4-prefix-range": "Диапазон префиксов IPv4",
-    "tr-ipv6-prefix": "Префикс IPv6",
-    "tr-ipv6-prefix-range": "Диапазон префиксов IPv6",
-    "tr-psid-offset": "Смещение PSID",
-    "tr-psid-length": "Длина PSID",
-    "tr-gua-prefix": "Префикс GUA",
-    "tr-mape-notice1": "Примечание: фактические значения могут отличаться.",
-    "tr-mape-notice2": "Примечание: порты 1-1023 являются привилегированными портами. Проверьте детали у вашего ISP.",
-    "tr-ap-network-settings": "Параметры сети AP",
-    "tr-ap-ip-address": "IP адрес",
-    "tr-ap-gateway": "Шлюз",
-    "tr-tuning": "Настройка",
-    "tr-netopt-optimization": "Динамическая оптимизация сети",
-    "tr-netopt-optimization-disabled": "Оптимизация отключена",
-    "tr-manual": "Ручной",
-    "tr-auto-mode": "Автоматический режим",
-    "tr-auto-optimization": "Автоматическая оптимизация",
-    "tr-manual-mode": "Ручной режим",
-    "tr-manual-settings": "Ручные параметры",
-    "tr-tcp-read-memory": "Память чтения TCP",
-    "tr-tcp-write-memory": "Память записи TCP",
-    "tr-connection-tracking-max": "Максимум отслеживания соединений",
-    "tr-network-device-backlog": "Очередь устройства сети",
-    "tr-socket-max-connections": "Максимум соединений сокета",
-    "tr-tcp-congestion-control": "Управление перегруженностью TCP",
-    "tr-cubic-default": "cubic (по умолчанию)",
-    "tr-bbr": "BBR",
-    "tr-reno": "Reno",
-    "tr-disabled-mode": "Режим отключения",
-    "tr-basic-system-features": "Основные системные функции",
-    "tr-system-management": "Управление системой",
-    "tr-network-management": "Управление сетью",
-    "tr-wifi-management": "Управление Wi-Fi",
-    "tr-modem-support": "Поддержка модема",
-    "tr-security-tools": "Инструменты безопасности",
-    "tr-system-monitoring": "Мониторинг системы",
-    "tr-diagnostic-tools": "Средства диагностики сети",
-    "tr-system-tools": "Системные инструменты",
-    "tr-themes-dashboard": "Темы и панель управления",
-    "tr-utilities": "Утилиты",
-    "tr-usb-storage": "Поддержка хранилища USB",
-    "tr-file-sharing": "Общий доступ к файлам",
-    "tr-dns-privacy": "DNS и конфиденциальность",
-    "tr-dnsmasq-settings": "Оптимизация DNS сервера",
-    "tr-dnsmasq-mode": "Режим DNS сервера",
-    "tr-dnsmasq-auto": "Автоматический",
-    "tr-dnsmasq-manual": "Ручной",
-    "tr-dnsmasq-disabled": "Отключено",
-    "tr-dnsmasq-cache": "Размер кэша",
-    "tr-dnsmasq-negcache": "Отрицательный кэш",
-    "tr-dnsmasq-auto-optimization": "Автоматическая оптимизация",
-    "tr-dnsmasq-optimization-disabled": "Оптимизация отключена",
-    "tr-feedback-link": "Форум",
-    "tr-asu-status-200": "Сервер ASU доступен. Статус: {status}",
-    "tr-asu-status-500": "Сервер ASU ответил внутренней ошибкой. Статус: {status}",
-    "tr-asu-status-unreachable": "Сервер ASU ответил неожиданным статусом. Статус: {status}",
-    "tr-asu-status-networkfail": "Не удалось достичь сервера ASU: {error}"
+  "tr-custom-packages": "Установленные пакеты",
+  "tr-custom-defaults": "Скрипт для запуска при первой загрузке (uci-defaults)",
+  "tr-postinst": "Postinst (Скрипт установки пакета)",
+  "tr-uci": "UCI-defaults (Скрипт конфигурации загрузки)",
+  "tr-package-search": "Поиск пакетов",
+  "tr-add-commands": "Добавить команды",
+  "tr-base-size": "База",
+  "tr-added-size": "Добавлено",
+  "tr-total-size": "Всего",
+  "tr-package-size-snapshot-unavailable": "※ Информация о размере пакета недоступна для версий SNAPSHOT",
+  "tr-package-size-note": "※ Не включает языковые пакеты и зависимости",
+  "tr-uci-size-limit": "※ Ограничение размера файла: 20480 байт: 20.00 КБ",
+  "tr-import-settings": "Импорт",
+  "tr-export-settings": "Экспорт",
+  "tr-asu-status-checking": "Проверка...",
+  "tr-asu-status-online": "Онлайн",
+  "tr-asu-status-offline": "Офлайн",
+  "tr-asu-status-error": "Ошибка",
+  "tr-asu-status-200": "Сервер ASU доступен. Статус: {status}",
+  "tr-asu-status-500": "Сервер ASU ответил внутренней ошибкой. Статус: {status}",
+  "tr-asu-status-unreachable": "Сервер ASU ответил неожиданным статусом. Статус: {status}",
+  "tr-asu-status-networkfail": "Не удалось достичь сервера ASU: {error}",
+  "tr-extended-info": "Информация о регионе и провайдере",
+  "tr-loading": "Загрузка…",
+  "tr-notice": "Уведомление",
+  "tr-country": "Область",
+  "tr-timezone": "Часовой пояс",
+  "tr-zonename": "Название зоны",
+  "tr-isp": "Провайдер",
+  "tr-as": "Номер AS",
+  "tr-ip-address": "Адрес",
+  "tr-method": "Тип подключения",
+  "tr-basic-configuration": "Базовая конфигурация",
+  "tr-language": "Язык",
+  "tr-device-name": "Имя устройства",
+  "tr-root-password": "Пароль root",
+  "tr-lan-ipv4-address": "IPv4-адрес LAN",
+  "tr-lan-ipv6-address": "IPv6-адрес LAN",
+  "tr-ssh-interface": "Интерфейс SSH",
+  "tr-ssh-port": "Порт SSH",
+  "tr-lan-dhcp-start": "Начало DHCP",
+  "tr-lan-dhcp-limit": "Лимит DHCP",
+  "tr-lan-dhcp-lease-time": "Время аренды DHCP",
+  "tr-wifi-configuration": "Конфигурация Wi-Fi",
+  "tr-wifi-disabled": "Wi-Fi отключен",
+  "tr-wifi-enabled": "Wi-Fi включен",
+  "tr-wifi-radio0": "Диапазон 2,4 ГГц",
+  "tr-wifi-radio1": "Диапазон 5 ГГц",
+  "tr-ssid-2ghz": "SSID (2,4 ГГц)",
+  "tr-ssid-5ghz": "SSID (5 ГГц)",
+  "tr-password-2ghz": "Пароль (2,4 ГГц)",
+  "tr-password-5ghz": "Пароль (5 ГГц)",
+  "tr-encryption": "Шифрование",
+  "tr-wifi-country-code": "Код страны",
+  "tr-wifi-advanced": "Расширенные настройки Wi-Fi",
+  "tr-wmm-enabled": "WMM (QoS)",
+  "tr-ieee80211w": "Защита управляющих кадров 802.11w",
+  "tr-80211w-disabled": "Отключено",
+  "tr-80211w-optional": "Опционально",
+  "tr-80211w-required": "Обязательно",
+  "tr-internet-connection": "Интернет-соединение",
+  "tr-manual-setting": "Ручная настройка",
+  "tr-manual-setting-warning": "Режим ручной настройки: Автоматическое обнаружение отключено. Пожалуйста, настройте вручную.",
+  "tr-auto": "Авто",
+  "tr-auto-detection": "Автоматическое обнаружение",
+  "tr-dhcp": "DHCP",
+  "tr-pppoe": "PPPoE",
+  "tr-dslite": "DS-Lite",
+  "tr-mape": "MAP-E",
+  "tr-ap-mode": "Режим точки доступа",
+  "tr-pppoe-username": "Имя пользователя",
+  "tr-pppoe-password": "Пароль",
+  "tr-dslite-aftr": "Адрес AFTR",
+  "tr-mape-settings": "Настройки MAP-E",
+  "tr-mape-ipv4addr": "IPv4-адрес",
+  "tr-mape-ip6prefix": "Префикс IPv6",
+  "tr-mape-peeraddr": "Адрес узла",
+  "tr-mape-psidlen": "Длина PSID",
+  "tr-mape-psid": "PSID",
+  "tr-mape-offset": "Смещение",
+  "tr-ap-dhcp-enabled": "DHCP включен",
+  "tr-ap-gateway": "Шлюз",
+  "tr-tuning": "Настройка",
+  "tr-netopt-optimization": "Динамическая оптимизация сети",
+  "tr-netopt-optimization-disabled": "Оптимизация отключена",
+  "tr-manual": "Вручную",
+  "tr-auto-mode": "Автоматический режим",
+  "tr-auto-optimization": "Автоматическая оптимизация",
+  "tr-manual-mode": "Ручной режим",
+  "tr-manual-settings": "Ручные настройки",
+  "tr-tcp-read-memory": "Память чтения TCP",
+  "tr-tcp-write-memory": "Память записи TCP",
+  "tr-connection-tracking-max": "Максимум отслеживания соединений",
+  "tr-network-device-backlog": "Очередь сетевых устройств",
+  "tr-socket-max-connections": "Максимум соединений сокета",
+  "tr-tcp-congestion-control": "Управление перегрузкой TCP",
+  "tr-cubic-default": "cubic (по умолчанию)",
+  "tr-bbr": "BBR",
+  "tr-reno": "Reno",
+  "tr-disabled-mode": "Отключенный режим",
+  "tr-basic-system-features": "Основные системные функции",
+  "tr-system-management": "Управление системой",
+  "tr-network-management": "Управление сетью",
+  "tr-wifi-management": "Управление Wi-Fi",
+  "tr-modem-support": "Поддержка модема",
+  "tr-security-tools": "Инструменты безопасности",
+  "tr-system-monitoring": "Мониторинг системы",
+  "tr-diagnostic-tools": "Инструменты диагностики сети",
+  "tr-system-tools": "Инструменты администрирования системы",
+  "tr-themes-dashboard": "Темы и панель управления",
+  "tr-utilities": "Утилиты",
+  "tr-usb-storage": "Поддержка USB-накопителей",
+  "tr-file-sharing": "Общий доступ к файлам",
+  "tr-dns-privacy": "DNS и конфиденциальность",
+  "tr-dnsmasq-settings": "Оптимизация DNS-сервера",
+  "tr-dnsmasq-mode": "Режим DNS-сервера",
+  "tr-dnsmasq-auto": "Авто",
+  "tr-dnsmasq-manual": "Вручную",
+  "tr-dnsmasq-disabled": "Отключено",
+  "tr-dnsmasq-cache": "Размер кэша",
+  "tr-dnsmasq-negcache": "Отрицательный кэш",
+  "tr-dnsmasq-auto-optimization": "Автоматическая оптимизация",
+  "tr-dnsmasq-optimization-disabled": "Оптимизация отключена",
+  "tr-feedback-link": "Форум"
 }
