--- a/www/langs/custom.pt-br.json
+++ b/www/langs/custom.pt-br.json
@@ -1,126 +1,126 @@
 {
-  "tr-custom-packages": "Paquetes instalados",
-  "tr-custom-defaults": "Script para ejecutar en el primer arranque (uci-defaults)",
-  "tr-postinst": "Postinst (Script de instalación de paquetes)",
-  "tr-uci": "UCI-defaults (Script de configuración de arranque)",
-  "tr-package-search": "Búsqueda de paquetes",
-  "tr-add-commands": "Agregar comandos",
+  "tr-custom-packages": "Pacotes Instalados",
+  "tr-custom-defaults": "Script executado na primeira inicialização (uci-defaults)",
+  "tr-postinst": "Postinst (Script de Instalação de Pacote)",
+  "tr-uci": "UCI-defaults (Script de Configuração de Boot)",
+  "tr-package-search": "Busca de Pacotes",
+  "tr-add-commands": "Adicionar Comando",
   "tr-base-size": "Base",
-  "tr-added-size": "Agregado",
+  "tr-added-size": "Adicionado",
   "tr-total-size": "Total",
-  "tr-package-size-snapshot-unavailable": "※ La información del tamaño del paquete no está disponible para versiones SNAPSHOT",
-  "tr-package-size-note": "※ No incluye paquetes de idioma y dependencias",
-  "tr-uci-size-limit": "※ Límite de tamaño de archivo: 20480 bytes: 20.00 KB",
+  "tr-package-size-snapshot-unavailable": "※ Informações de tamanho de pacote não estão disponíveis para builds SNAPSHOT",
+  "tr-package-size-note": "※ Pacotes de idioma e dependências não estão incluídos",
+  "tr-uci-size-limit": "※ Limite de tamanho de arquivo: 20480 bytes: 20,00 KB",
   "tr-import-settings": "Importar",
   "tr-export-settings": "Exportar",
-  "tr-asu-status-checking": "Comprobando...",
-  "tr-asu-status-online": "En línea",
-  "tr-asu-status-offline": "Fuera de línea",
-  "tr-asu-status-error": "Error",
-  "tr-asu-status-200": "El servidor ASU está disponible. Estado: {status}",
-  "tr-asu-status-500": "El servidor ASU respondió con un error interno. Estado: {status}",
-  "tr-asu-status-unreachable": "El servidor ASU respondió con un estado inesperado. Estado: {status}",
-  "tr-asu-status-networkfail": "No se pudo alcanzar el servidor ASU: {error}",
-  "tr-extended-info": "Información de región e ISP",
-  "tr-loading": "Cargando…",
+  "tr-asu-status-checking": "Verificando...",
+  "tr-asu-status-online": "Online",
+  "tr-asu-status-offline": "Offline",
+  "tr-asu-status-error": "Erro",
+  "tr-asu-status-200": "Servidor ASU está acessível. Status: {status}",
+  "tr-asu-status-500": "Servidor ASU respondeu com um erro interno. Status: {status}",
+  "tr-asu-status-unreachable": "Servidor ASU respondeu com um status inesperado. Status: {status}",
+  "tr-asu-status-networkfail": "Falha ao acessar o servidor ASU: {error}",
+  "tr-extended-info": "Informações de Região e ISP",
+  "tr-loading": "Carregando…",
   "tr-notice": "Aviso",
   "tr-country": "Área",
-  "tr-timezone": "Zona horaria",
-  "tr-zonename": "Nombre de zona",
+  "tr-timezone": "Fuso Horário",
+  "tr-zonename": "Nome da Zona",
   "tr-isp": "ISP",
   "tr-as": "Número AS",
-  "tr-ip-address": "Dirección",
-  "tr-method": "Tipo de conexión",
-  "tr-basic-configuration": "Configuración básica",
+  "tr-ip-address": "Endereço",
+  "tr-method": "Tipo de Conexão",
+  "tr-basic-configuration": "Configuração Básica",
   "tr-language": "Idioma",
-  "tr-device-name": "Nombre del dispositivo",
-  "tr-root-password": "Contraseña de root",
-  "tr-lan-ipv4-address": "Dirección IPv4 de LAN",
-  "tr-lan-ipv6-address": "Dirección IPv6 de LAN",
-  "tr-ssh-interface": "Interfaz SSH",
-  "tr-ssh-port": "Puerto SSH",
-  "tr-lan-dhcp-start": "Inicio DHCP",
-  "tr-lan-dhcp-limit": "Límite DHCP",
-  "tr-lan-dhcp-lease-time": "Tiempo de concesión DHCP",
-  "tr-wifi-configuration": "Configuración Wi-Fi",
-  "tr-wifi-disabled": "Wi-Fi deshabilitado",
-  "tr-wifi-enabled": "Wi-Fi habilitado",
-  "tr-wifi-radio0": "Banda de 2.4GHz",
-  "tr-wifi-radio1": "Banda de 5GHz",
-  "tr-ssid-2ghz": "SSID (2.4GHz)",
+  "tr-device-name": "Nome do Dispositivo",
+  "tr-root-password": "Senha Root",
+  "tr-lan-ipv4-address": "Endereço IPv4 LAN",
+  "tr-lan-ipv6-address": "Endereço IPv6 LAN",
+  "tr-ssh-interface": "Interface SSH",
+  "tr-ssh-port": "Porta SSH",
+  "tr-lan-dhcp-start": "Início DHCP",
+  "tr-lan-dhcp-limit": "Limite DHCP",
+  "tr-lan-dhcp-lease-time": "Tempo de Concessão DHCP",
+  "tr-wifi-configuration": "Configuração Wi-Fi",
+  "tr-wifi-disabled": "Wi-Fi Desabilitado",
+  "tr-wifi-enabled": "Wi-Fi Habilitado",
+  "tr-wifi-radio0": "Banda 2,4GHz",
+  "tr-wifi-radio1": "Banda 5GHz",
+  "tr-ssid-2ghz": "SSID (2,4GHz)",
   "tr-ssid-5ghz": "SSID (5GHz)",
-  "tr-password-2ghz": "Contraseña (2.4GHz)",
-  "tr-password-5ghz": "Contraseña (5GHz)",
-  "tr-encryption": "Cifrado",
-  "tr-wifi-country-code": "Código de país",
-  "tr-wifi-advanced": "Configuración avanzada de Wi-Fi",
+  "tr-password-2ghz": "Senha (2,4GHz)",
+  "tr-password-5ghz": "Senha (5GHz)",
+  "tr-encryption": "Criptografia",
+  "tr-wifi-country-code": "Código do País",
+  "tr-wifi-advanced": "Configurações Avançadas de Wi-Fi",
   "tr-wmm-enabled": "WMM (QoS)",
-  "tr-ieee80211w": "Protección de tramas de gestión 802.11w",
-  "tr-80211w-disabled": "Deshabilitado",
+  "tr-ieee80211w": "Proteção de Quadro de Gerenciamento 802.11w",
+  "tr-80211w-disabled": "Desabilitado",
   "tr-80211w-optional": "Opcional",
-  "tr-80211w-required": "Requerido",
-  "tr-internet-connection": "Conexión a Internet",
-  "tr-manual-setting": "Configuración manual",
-  "tr-manual-setting-warning": "Modo de configuración manual: La detección automática está deshabilitada. Configure manualmente.",
-  "tr-auto": "Auto",
-  "tr-auto-detection": "Detección automática",
+  "tr-80211w-required": "Obrigatório",
+  "tr-internet-connection": "Conexão com Internet",
+  "tr-manual-setting": "Configuração Manual",
+  "tr-manual-setting-warning": "Modo de configuração manual: A detecção automática está desabilitada. Configure manualmente.",
+  "tr-auto": "Automático",
+  "tr-auto-detection": "Detecção Automática",
   "tr-dhcp": "DHCP",
   "tr-pppoe": "PPPoE",
   "tr-dslite": "DS-Lite",
   "tr-mape": "MAP-E",
-  "tr-ap-mode": "Modo de punto de acceso",
-  "tr-pppoe-username": "Nombre de usuario",
-  "tr-pppoe-password": "Contraseña",
-  "tr-dslite-aftr": "Dirección AFTR",
-  "tr-mape-settings": "Configuración MAP-E",
-  "tr-mape-ipv4addr": "Dirección IPv4",
-  "tr-mape-ip6prefix": "Prefijo IPv6",
-  "tr-mape-peeraddr": "Dirección del par",
-  "tr-mape-psidlen": "Longitud PSID",
+  "tr-ap-mode": "Modo Ponto de Acesso",
+  "tr-pppoe-username": "Nome de Usuário",
+  "tr-pppoe-password": "Senha",
+  "tr-dslite-aftr": "Endereço AFTR",
+  "tr-mape-settings": "Configurações MAP-E",
+  "tr-mape-ipv4addr": "Endereço IPv4",
+  "tr-mape-ip6prefix": "Prefixo IPv6",
+  "tr-mape-peeraddr": "Endereço Peer",
+  "tr-mape-psidlen": "Comprimento PSID",
   "tr-mape-psid": "PSID",
-  "tr-mape-offset": "Desplazamiento",
-  "tr-ap-dhcp-enabled": "DHCP habilitado",
-  "tr-ap-gateway": "Puerta de enlace",
-  "tr-tuning": "Ajuste",
-  "tr-netopt-optimization": "Optimización dinámica de red",
-  "tr-netopt-optimization-disabled": "Optimización deshabilitada",
+  "tr-mape-offset": "Deslocamento",
+  "tr-ap-dhcp-enabled": "DHCP Habilitado",
+  "tr-ap-gateway": "Gateway",
+  "tr-tuning": "Ajustes",
+  "tr-netopt-optimization": "Otimização Dinâmica de Rede",
+  "tr-netopt-optimization-disabled": "Otimização Desabilitada",
   "tr-manual": "Manual",
-  "tr-auto-mode": "Modo automático",
-  "tr-auto-optimization": "Optimización automática",
-  "tr-manual-mode": "Modo manual",
-  "tr-manual-settings": "Configuración manual",
-  "tr-tcp-read-memory": "Memoria de lectura TCP",
-  "tr-tcp-write-memory": "Memoria de escritura TCP",
-  "tr-connection-tracking-max": "Máximo de seguimiento de conexiones",
-  "tr-network-device-backlog": "Acumulación de dispositivos de red",
-  "tr-socket-max-connections": "Conexiones máximas de socket",
-  "tr-tcp-congestion-control": "Control de congestión TCP",
-  "tr-cubic-default": "cubic (predeterminado)",
+  "tr-auto-mode": "Modo Automático",
+  "tr-auto-optimization": "Otimização Automática",
+  "tr-manual-mode": "Modo Manual",
+  "tr-manual-settings": "Configurações Manuais",
+  "tr-tcp-read-memory": "Memória de Leitura TCP",
+  "tr-tcp-write-memory": "Memória de Escrita TCP",
+  "tr-connection-tracking-max": "Máximo de Rastreamento de Conexão",
+  "tr-network-device-backlog": "Backlog de Dispositivo de Rede",
+  "tr-socket-max-connections": "Máximo de Conexões de Socket",
+  "tr-tcp-congestion-control": "Controle de Congestionamento TCP",
+  "tr-cubic-default": "cubic (Padrão)",
   "tr-bbr": "BBR",
   "tr-reno": "Reno",
-  "tr-disabled-mode": "Modo deshabilitado",
-  "tr-basic-system-features": "Funciones básicas del sistema",
-  "tr-system-management": "Gestión del sistema",
-  "tr-network-management": "Gestión de red",
-  "tr-wifi-management": "Gestión de Wi-Fi",
-  "tr-modem-support": "Soporte de módem",
-  "tr-security-tools": "Herramientas de seguridad",
-  "tr-system-monitoring": "Monitoreo del sistema",
-  "tr-diagnostic-tools": "Herramientas de diagnóstico de red",
-  "tr-system-tools": "Herramientas de administración del sistema",
-  "tr-themes-dashboard": "Temas y panel de control",
-  "tr-utilities": "Utilidades",
-  "tr-usb-storage": "Soporte de almacenamiento USB",
-  "tr-file-sharing": "Compartir archivos",
-  "tr-dns-privacy": "DNS y privacidad",
-  "tr-dnsmasq-settings": "Optimización del servidor DNS",
-  "tr-dnsmasq-mode": "Modo de servidor DNS",
-  "tr-dnsmasq-auto": "Auto",
+  "tr-disabled-mode": "Modo Desabilitado",
+  "tr-basic-system-features": "Recursos Básicos do Sistema",
+  "tr-system-management": "Gerenciamento do Sistema",
+  "tr-network-management": "Gerenciamento de Rede",
+  "tr-wifi-management": "Gerenciamento Wi-Fi",
+  "tr-modem-support": "Suporte a Modem",
+  "tr-security-tools": "Ferramentas de Segurança",
+  "tr-system-monitoring": "Monitoramento do Sistema",
+  "tr-diagnostic-tools": "Ferramentas de Diagnóstico de Rede",
+  "tr-system-tools": "Ferramentas de Administração do Sistema",
+  "tr-themes-dashboard": "Temas e Painel",
+  "tr-utilities": "Utilitários",
+  "tr-usb-storage": "Suporte a Armazenamento USB",
+  "tr-file-sharing": "Compartilhamento de Arquivos",
+  "tr-dns-privacy": "DNS & Privacidade",
+  "tr-dnsmasq-settings": "Otimização do Servidor DNS",
+  "tr-dnsmasq-mode": "Modo do Servidor DNS",
+  "tr-dnsmasq-auto": "Automático",
   "tr-dnsmasq-manual": "Manual",
-  "tr-dnsmasq-disabled": "Deshabilitado",
-  "tr-dnsmasq-cache": "Tamaño de caché",
-  "tr-dnsmasq-negcache": "Caché negativa",
-  "tr-dnsmasq-auto-optimization": "Optimización automática",
-  "tr-dnsmasq-optimization-disabled": "Optimización deshabilitada",
-  "tr-feedback-link": "Foro"
+  "tr-dnsmasq-disabled": "Desabilitado",
+  "tr-dnsmasq-cache": "Tamanho do Cache",
+  "tr-dnsmasq-negcache": "Cache Negativo",
+  "tr-dnsmasq-auto-optimization": "Otimização Automática",
+  "tr-dnsmasq-optimization-disabled": "Otimização Desabilitada",
+  "tr-feedback-link": "Fórum"
 }
