--- a/www/langs/custom.zh-tw.json
+++ b/www/langs/custom.zh-tw.json
@@ -1,125 +1,126 @@
 {
-    "tr-custom-packages": "已安裝的軟體包",
-    "tr-custom-defaults": "首次啟動時執行的指令碼 (uci-defaults)",
-    "tr-postinst": "Postinst(軟體包安裝指令碼)",
-    "tr-uci": "UCI-defaults(啟動設定指令碼)",
-    "tr-package-search": "軟體包搜尋",
-    "tr-add-commands": "新增命令",
-    "tr-base-size": "基礎",
-    "tr-added-size": "新增",
-    "tr-total-size": "總計",
-    "tr-package-size-snapshot-unavailable": "※ SNAPSHOT版本無法取得軟體包大小資訊",
-    "tr-package-size-note": "※ 不包括語言和相依軟體包",
-    "tr-uci-size-limit": "※ 檔案大小限制: 20480 bytes: 20.00 KB",
-    "tr-import-settings": "匯入",
-    "tr-export-settings": "匯出",
-    "tr-extended-info": "地區和ISP資訊",
-    "tr-loading": "載入中…",
-    "tr-notice": "通知",
-    "tr-country": "地區",
-    "tr-timezone": "時區",
-    "tr-zonename": "區域名稱",
-    "tr-isp": "ISP",
-    "tr-as": "AS號",
-    "tr-ip-address": "位址",
-    "tr-method": "連線方式",
-    "tr-basic-configuration": "基本設定",
-    "tr-language": "語言",
-    "tr-device-name": "裝置名稱",
-    "tr-root-password": "root密碼",
-    "tr-lan-ipv4-address": "LAN IPv4位址",
-    "tr-lan-ipv6-address": "LAN IPv6位址",
-    "tr-ssh-interface": "SSH介面",
-    "tr-ssh-port": "SSH連接埠",
-    "tr-flow-offloading-type": "流量卸載類型",
-    "tr-restore-backup-path": "備份還原路徑",
-    "tr-wi-fi-configuration": "Wi-Fi設定",
-    "tr-wi-fi-mode": "Wi-Fi模式",
-    "tr-wi-fi-ssid": "Wi-Fi SSID",
-    "tr-wi-fi-password": "Wi-Fi密碼",
-    "tr-mobility-domain": "行動域",
-    "tr-min-snr": "最小SNR",
-    "tr-standard": "標準",
-    "tr-usteer": "Usteer",
-    "tr-disabled": "停用",
-    "tr-wifi-optimization-disabled": "Wi-Fi停用",
-    "tr-internet-connection": "網際網路連線",
-    "tr-connection-type": "連線類型",
-    "tr-auto": "自動",
-    "tr-pppoe": "PPPoE",
-    "tr-dslite": "DS-Lite",
-    "tr-mape": "MAP-E",
-    "tr-ap": "AP模式",
-    "tr-auto-detection": "自動偵測",
-    "tr-dhcp": "DHCP",
-    "tr-pppoe-credentials": "PPPoE認證",
-    "tr-pppoe-username": "使用者名稱",
-    "tr-pppoe-password": "密碼",
-    "tr-ds-lite-settings": "DS-Lite設定",
-    "tr-dslite-aftr-type": "AFTR類型",
-    "tr-dslite-area": "地區",
-    "tr-dslite-aftr-ipv6-address": "AFTR位址",
-    "tr-dslite-notice1": "注: 實際值可能有所不同。",
-    "tr-mape-type": "位址類型",
-    "tr-br": "對等位址 (BR)",
-    "tr-ea-len": "EA長度",
-    "tr-ipv4-prefix": "IPv4位址",
-    "tr-ipv4-prefix-length": "IPv4字首長度",
-    "tr-ipv4-prefix-range": "IPv4字首範圍",
-    "tr-ipv6-prefix": "IPv6字首",
-    "tr-ipv6-prefix-range": "IPv6字首範圍",
-    "tr-psid-offset": "PSID位移",
-    "tr-psid-length": "PSID長度",
-    "tr-gua-prefix": "GUA字首",
-    "tr-mape-notice1": "注: 實際值可能有所不同。",
-    "tr-mape-notice2": "注: 連接埠1-1023是特權連接埠。詳情請洽詢您的ISP。",
-    "tr-ap-network-settings": "AP網路設定",
-    "tr-ap-ip-address": "IP位址",
-    "tr-ap-gateway": "閘道",
-    "tr-tuning": "調整",
-    "tr-netopt-optimization": "動態網路最佳化",
-    "tr-netopt-optimization-disabled": "最佳化停用",
-    "tr-manual": "手動",
-    "tr-auto-mode": "自動模式",
-    "tr-auto-optimization": "自動最佳化",
-    "tr-manual-mode": "手動模式",
-    "tr-manual-settings": "手動設定",
-    "tr-tcp-read-memory": "TCP讀取記憶體",
-    "tr-tcp-write-memory": "TCP寫入記憶體",
-    "tr-connection-tracking-max": "連線追蹤最大值",
-    "tr-network-device-backlog": "網路裝置積壓",
-    "tr-socket-max-connections": "通訊端最大連線數",
-    "tr-tcp-congestion-control": "TCP擁塞控制",
-    "tr-cubic-default": "cubic(預設)",
-    "tr-bbr": "BBR",
-    "tr-reno": "Reno",
-    "tr-disabled-mode": "停用模式",
-    "tr-basic-system-features": "基本系統功能",
-    "tr-system-management": "系統管理",
-    "tr-network-management": "網路管理",
-    "tr-wifi-management": "Wi-Fi管理",
-    "tr-modem-support": "數據機支援",
-    "tr-security-tools": "安全工具",
-    "tr-system-monitoring": "系統監控",
-    "tr-diagnostic-tools": "網路診斷工具",
-    "tr-system-tools": "系統管理工具",
-    "tr-themes-dashboard": "主題和儀表板",
-    "tr-utilities": "公用程式",
-    "tr-usb-storage": "USB存放裝置支援",
-    "tr-file-sharing": "檔案共用",
-    "tr-dns-privacy": "DNS & 隱私",
-    "tr-dnsmasq-settings": "DNS伺服器最佳化",
-    "tr-dnsmasq-mode": "DNS伺服器模式",
-    "tr-dnsmasq-auto": "自動",
-    "tr-dnsmasq-manual": "手動",
-    "tr-dnsmasq-disabled": "停用",
-    "tr-dnsmasq-cache": "快取大小",
-    "tr-dnsmasq-negcache": "負面快取",
-    "tr-dnsmasq-auto-optimization": "自動最佳化",
-    "tr-dnsmasq-optimization-disabled": "最佳化停用",
-    "tr-feedback-link": "論壇",
-    "tr-asu-status-200": "ASU伺服器可存取。狀態: {status}",
-    "tr-asu-status-500": "ASU伺服器回應了內部錯誤。狀態: {status}",
-    "tr-asu-status-unreachable": "ASU伺服器回應異常。狀態: {status}",
-    "tr-asu-status-networkfail": "無法連線到ASU伺服器: {error}"
+  "tr-custom-packages": "已安裝的軟體包",
+  "tr-custom-defaults": "首次啟動時執行的指令碼 (uci-defaults)",
+  "tr-postinst": "Postinst(軟體包安裝指令碼)",
+  "tr-uci": "UCI-defaults(啟動設定指令碼)",
+  "tr-package-search": "軟體包搜尋",
+  "tr-add-commands": "新增命令",
+  "tr-base-size": "基礎",
+  "tr-added-size": "新增",
+  "tr-total-size": "總計",
+  "tr-package-size-snapshot-unavailable": "※ SNAPSHOT版本無法取得軟體包大小資訊",
+  "tr-package-size-note": "※ 不包括語言和相依軟體包",
+  "tr-uci-size-limit": "※ 檔案大小限制: 20480 bytes: 20.00 KB",
+  "tr-import-settings": "匯入",
+  "tr-export-settings": "匯出",
+  "tr-asu-status-checking": "檢查中...",
+  "tr-asu-status-online": "線上",
+  "tr-asu-status-offline": "離線",
+  "tr-asu-status-error": "錯誤",
+  "tr-asu-status-200": "ASU伺服器可存取。狀態: {status}",
+  "tr-asu-status-500": "ASU伺服器回應了內部錯誤。狀態: {status}",
+  "tr-asu-status-unreachable": "ASU伺服器回應異常。狀態: {status}",
+  "tr-asu-status-networkfail": "無法連線到ASU伺服器: {error}",
+  "tr-extended-info": "地區和ISP資訊",
+  "tr-loading": "載入中…",
+  "tr-notice": "通知",
+  "tr-country": "地區",
+  "tr-timezone": "時區",
+  "tr-zonename": "區域名稱",
+  "tr-isp": "ISP",
+  "tr-as": "AS號",
+  "tr-ip-address": "位址",
+  "tr-method": "連線方式",
+  "tr-basic-configuration": "基本設定",
+  "tr-language": "語言",
+  "tr-device-name": "裝置名稱",
+  "tr-root-password": "root密碼",
+  "tr-lan-ipv4-address": "LAN IPv4位址",
+  "tr-lan-ipv6-address": "LAN IPv6位址",
+  "tr-ssh-interface": "SSH介面",
+  "tr-ssh-port": "SSH連接埠",
+  "tr-lan-dhcp-start": "DHCP起始",
+  "tr-lan-dhcp-limit": "DHCP限制",
+  "tr-lan-dhcp-lease-time": "DHCP租期",
+  "tr-wifi-configuration": "Wi-Fi設定",
+  "tr-wifi-disabled": "Wi-Fi已停用",
+  "tr-wifi-enabled": "Wi-Fi已啟用",
+  "tr-wifi-radio0": "2.4GHz頻段",
+  "tr-wifi-radio1": "5GHz頻段",
+  "tr-ssid-2ghz": "SSID (2.4GHz)",
+  "tr-ssid-5ghz": "SSID (5GHz)",
+  "tr-password-2ghz": "密碼 (2.4GHz)",
+  "tr-password-5ghz": "密碼 (5GHz)",
+  "tr-encryption": "加密",
+  "tr-wifi-country-code": "國家代碼",
+  "tr-wifi-advanced": "進階Wi-Fi設定",
+  "tr-wmm-enabled": "WMM (QoS)",
+  "tr-ieee80211w": "802.11w管理訊框保護",
+  "tr-80211w-disabled": "停用",
+  "tr-80211w-optional": "選用",
+  "tr-80211w-required": "必需",
+  "tr-internet-connection": "網際網路連線",
+  "tr-manual-setting": "手動設定",
+  "tr-manual-setting-warning": "手動設定模式：自動偵測已停用。請手動設定。",
+  "tr-auto": "自動",
+  "tr-auto-detection": "自動偵測",
+  "tr-dhcp": "DHCP",
+  "tr-pppoe": "PPPoE",
+  "tr-dslite": "DS-Lite",
+  "tr-mape": "MAP-E",
+  "tr-ap-mode": "存取點模式",
+  "tr-pppoe-username": "使用者名稱",
+  "tr-pppoe-password": "密碼",
+  "tr-dslite-aftr": "AFTR位址",
+  "tr-mape-settings": "MAP-E設定",
+  "tr-mape-ipv4addr": "IPv4位址",
+  "tr-mape-ip6prefix": "IPv6字首",
+  "tr-mape-peeraddr": "對等位址",
+  "tr-mape-psidlen": "PSID長度",
+  "tr-mape-psid": "PSID",
+  "tr-mape-offset": "位移",
+  "tr-ap-dhcp-enabled": "DHCP已啟用",
+  "tr-ap-gateway": "閘道",
+  "tr-tuning": "調整",
+  "tr-netopt-optimization": "動態網路最佳化",
+  "tr-netopt-optimization-disabled": "最佳化已停用",
+  "tr-manual": "手動",
+  "tr-auto-mode": "自動模式",
+  "tr-auto-optimization": "自動最佳化",
+  "tr-manual-mode": "手動模式",
+  "tr-manual-settings": "手動設定",
+  "tr-tcp-read-memory": "TCP讀取記憶體",
+  "tr-tcp-write-memory": "TCP寫入記憶體",
+  "tr-connection-tracking-max": "連線追蹤最大值",
+  "tr-network-device-backlog": "網路裝置積壓",
+  "tr-socket-max-connections": "通訊端最大連線數",
+  "tr-tcp-congestion-control": "TCP擁塞控制",
+  "tr-cubic-default": "cubic(預設)",
+  "tr-bbr": "BBR",
+  "tr-reno": "Reno",
+  "tr-disabled-mode": "停用模式",
+  "tr-basic-system-features": "基本系統功能",
+  "tr-system-management": "系統管理",
+  "tr-network-management": "網路管理",
+  "tr-wifi-management": "Wi-Fi管理",
+  "tr-modem-support": "數據機支援",
+  "tr-security-tools": "安全工具",
+  "tr-system-monitoring": "系統監控",
+  "tr-diagnostic-tools": "網路診斷工具",
+  "tr-system-tools": "系統管理工具",
+  "tr-themes-dashboard": "主題和儀表板",
+  "tr-utilities": "實用工具",
+  "tr-usb-storage": "USB儲存支援",
+  "tr-file-sharing": "檔案共享",
+  "tr-dns-privacy": "DNS & 隱私",
+  "tr-dnsmasq-settings": "DNS伺服器最佳化",
+  "tr-dnsmasq-mode": "DNS伺服器模式",
+  "tr-dnsmasq-auto": "自動",
+  "tr-dnsmasq-manual": "手動",
+  "tr-dnsmasq-disabled": "停用",
+  "tr-dnsmasq-cache": "快取大小",
+  "tr-dnsmasq-negcache": "負面快取",
+  "tr-dnsmasq-auto-optimization": "自動最佳化",
+  "tr-dnsmasq-optimization-disabled": "最佳化已停用",
+  "tr-feedback-link": "論壇"
 }
