--- a/www/langs/custom.en.json
+++ b/www/langs/custom.en.json
@@ -150,6 +150,7 @@
     "tr-no": "No",
     "tr-ok": "OK",
     "tr-cancel": "Cancel",
+    "tr-review-configuration": "Review Configuration",
     
     "tr-ui-mode-select": "Select UI mode:",
     "tr-ui-whiptail": "whiptail (dialog-based TUI)",
