--- a/www/langs/custom.ja.json
+++ b/www/langs/custom.ja.json
@@ -152,6 +152,27 @@
     "tr-ok": "OK",
     "tr-cancel": "キャンセル",
     
+    "tr-select-option": "オプションを選択:",
+    "tr-view-device-info": "デバイス情報を表示",
+    "tr-view-package-list": "パッケージ一覧を表示",
+    "tr-view-config-vars": "設定変数を表示",
+    "tr-view-postinst": "postinst.shを表示",
+    "tr-view-setup": "setup.shを表示",
+    "tr-apply-config": "設定を適用",
+    "tr-device-information": "デバイス情報",
+    "tr-package-list": "パッケージ一覧",
+    "tr-config-vars": "設定変数",
+    "tr-no-packages": "パッケージが選択されていません",
+    "tr-no-config-vars": "設定変数がありません",
+    "tr-postinst-not-found": "postinst.shファイルが見つかりません",
+    "tr-setup-not-found": "setup.shファイルが見つかりません",
+    "tr-apply-confirm": "この設定を適用しますか？\n\n以下を実行します：\n1. postinst.shでパッケージをインストール\n2. setup.shで設定を適用\n3. 必要に応じて再起動\n\n続行しますか？",
+    "tr-installing-packages": "パッケージをインストール中...",
+    "tr-applying-config": "システム設定を適用中...",
+    "tr-config-applied": "設定の適用が完了しました！\n\n今すぐ再起動しますか？",
+    "tr-auto-config-applied": "自動設定を適用しました！",
+    "tr-use-auto-config": "この自動検出された設定を使用しますか？",
+    
     "tr-ui-mode-select": "UIモードを選択:",
     "tr-ui-whiptail": "whiptail (ダイアログベースTUI)",
     "tr-ui-simple": "simple (リストベースTUI)",
