--- a/www/langs/custom.en.json
+++ b/www/langs/custom.en.json
@@ -152,6 +152,27 @@
     "tr-ok": "OK",
     "tr-cancel": "Cancel",
     
+    "tr-select-option": "Select an option:",
+    "tr-view-device-info": "View Device Information",
+    "tr-view-package-list": "View Package List",
+    "tr-view-config-vars": "View Configuration Variables",
+    "tr-view-postinst": "View postinst.sh",
+    "tr-view-setup": "View setup.sh",
+    "tr-apply-config": "Apply Configuration",
+    "tr-device-information": "Device Information",
+    "tr-package-list": "Package List",
+    "tr-config-vars": "Configuration Variables",
+    "tr-no-packages": "No packages selected",
+    "tr-no-config-vars": "No configuration variables set",
+    "tr-postinst-not-found": "postinst.sh file not found",
+    "tr-setup-not-found": "setup.sh file not found",
+    "tr-apply-confirm": "Apply this configuration?\n\nThis will:\n1. Install packages via postinst.sh\n2. Apply settings via setup.sh\n3. Optionally reboot\n\nContinue?",
+    "tr-installing-packages": "Executing package installation...",
+    "tr-applying-config": "Applying system configuration...",
+    "tr-config-applied": "Configuration applied successfully!\n\nReboot now?",
+    "tr-auto-config-applied": "Auto-configuration applied!",
+    "tr-use-auto-config": "Use this auto-detected configuration?",
+    
     "tr-ui-mode-select": "Select UI mode:",
     "tr-ui-whiptail": "whiptail (dialog-based TUI)",
     "tr-ui-simple": "simple (list-based TUI)",
