--- a/www/langs/custom.ja.json
+++ b/www/langs/custom.ja.json
@@ -1,188 +1,188 @@
 {
-    "tr-custom-packages": "Installed Packages",
-    "tr-custom-defaults": "Script executed on first boot (uci-defaults)",
-    "tr-postinst": "Postinst (Package Installation Script)",
-    "tr-uci": "UCI-defaults (Boot Configuration Script)",
-    "tr-package-search": "Package Search",
-    "tr-add-commands": "Add Command",
-    "tr-base-size": "Base",
-    "tr-added-size": "Added",
-    "tr-total-size": "Total",
-    "tr-package-size-snapshot-unavailable": "Note: Package size information is not available for SNAPSHOT builds",
-    "tr-package-size-note": "Note: Language and dependency packages are not included",
-    "tr-uci-size-limit": "Note: File size limit: 20480 bytes: 20.00 KB",
+    "tr-custom-packages": "インストールされたパッケージ",
+    "tr-custom-defaults": "初回起動時に実行されるスクリプト (uci-defaults)",
+    "tr-postinst": "Postinst(パッケージインストールスクリプト)",
+    "tr-uci": "UCI-defaults(ブート設定スクリプト)",
+    "tr-package-search": "パッケージ検索",
+    "tr-add-commands": "コマンド追加",
+    "tr-base-size": "ベース",
+    "tr-added-size": "追加",
+    "tr-total-size": "総計",
+    "tr-package-size-snapshot-unavailable": "※ SNAPSHOT版ではパッケージサイズ情報は利用できません",  
+    "tr-package-size-note": "※ 言語及び依存パッケージは含まれません",
+    "tr-uci-size-limit": "※ ファイルサイズ上限: 20480 bytes: 20.00 KB",
     
-    "tr-import-settings": "Import",
-    "tr-export-settings": "Export",
+    "tr-import-settings": "インポート",
+    "tr-export-settings": "エクスポート",
     
-    "tr-asu-status-checking": "Checking...",
-    "tr-asu-status-online": "Online",
-    "tr-asu-status-offline": "Offline",
-    "tr-asu-status-error": "Error",
-    "tr-asu-status-200": "ASU server is reachable. Status: {status}",
-    "tr-asu-status-500": "ASU server responded with an internal error. Status: {status}",
-    "tr-asu-status-unreachable": "ASU server responded with an unexpected status: {status}",
-    "tr-asu-status-networkfail": "Failed to reach the ASU server: {error}",
+    "tr-asu-status-checking": "確認中...",
+    "tr-asu-status-online": "オンライン",
+    "tr-asu-status-offline": "オフライン",
+    "tr-asu-status-error": "エラー",
+    "tr-asu-status-200": "ASU サーバーに接続可能です。ステータス: {status}",
+    "tr-asu-status-500": "ASU サーバーは応答しましたが、内部エラーです。ステータス: {status}",
+    "tr-asu-status-unreachable": "ASU サーバーには到達しましたが、異常応答です。ステータス: {status}",
+    "tr-asu-status-networkfail": "ASU サーバーに到達できませんでした: {error}",
     
-    "tr-extended-info": "Region and ISP Information",
-    "tr-loading": "Loading...",
-    "tr-notice": "Notice",
-    "tr-country": "Area",
-    "tr-timezone": "Timezone",
-    "tr-zonename": "Zonename",
+    "tr-extended-info": "地域とISP情報",
+    "tr-loading": "読み込み中…",
+    "tr-notice": "お知らせ",
+    "tr-country": "エリア",
+    "tr-timezone": "時間帯",
+    "tr-zonename": "地域名",
     "tr-isp": "ISP",
-    "tr-as": "AS Number",
-    "tr-ip-address": "Address",
-    "tr-method": "Method",
+    "tr-as": "AS番号",
+    "tr-ip-address": "アドレス",
+    "tr-method": "接続方式",
 
-    "tr-basic-configuration": "Basic Configuration",
-    "tr-language": "Language",
-    "tr-device-name": "Device Name",
-    "tr-root-password": "Root Password",
-    "tr-lan-ipv4-address" : "LAN IPv4 Address",
-    "tr-lan-ipv6-address": "LAN IPv6 Address",
-    "tr-ssh-interface": "SSH Interface",
-    "tr-ssh-port": "SSH Port",
-    "tr-flow-offloading-type": "Flow Offloading Type",
-    "tr-restore-backup-path": "Restore Backup Path",
+    "tr-basic-configuration": "基本設定",
+    "tr-language": "言語",
+    "tr-device-name": "デバイス名",
+    "tr-root-password": "ルートパスワード",
+    "tr-lan-ipv4-address" : "LAN IPv4アドレス",
+    "tr-lan-ipv6-address": "LAN IPv6アドレス",
+    "tr-ssh-interface": "SSHインターフェース",
+    "tr-ssh-port": "SSHポート",
+    "tr-flow-offloading-type": "フローオフロード方式",
+    "tr-restore-backup-path": "バックアップ復元パス",
 
-    "tr-wi-fi-configuration": "Wi-Fi Configuration",
-    "tr-wi-fi-mode": "Wi-Fi Mode",
+    "tr-wi-fi-configuration": "Wi-Fi設定",
+    "tr-wi-fi-mode": "Wi-Fiモード",
     "tr-wi-fi-ssid": "Wi-Fi SSID",
-    "tr-wi-fi-password": "Wi-Fi Password",
-    "tr-mobility-domain": "Mobility Domain",
-    "tr-min-snr": "Min SNR",
-    "tr-standard": "Standard",
+    "tr-wi-fi-password": "Wi-Fiパスワード",
+    "tr-mobility-domain": "モビリティドメイン",
+    "tr-min-snr": "ミニマムSNR",
+    "tr-standard": "標準",
     "tr-usteer": "Usteer",
-    "tr-disabled": "Disabled",
-    "tr-wifi-optimization-disabled": "Wi-Fi Disabled",
+    "tr-disabled": "無効",
+    "tr-wifi-optimization-disabled": "Wi-Fi無効",
     
-    "tr-internet-connection": "Internet Connection",
-    "tr-connection-type": "Connection Type",
-    "tr-auto": "Automatic",
+    "tr-internet-connection": "インターネット接続",
+    "tr-connection-type": "接続タイプ",
+    "tr-auto": "自動",
     "tr-pppoe": "PPPoE",
     "tr-dslite": "DS-Lite",
     "tr-mape": "MAP-E",
-    "tr-ap": "AP Mode",
+    "tr-ap": "APモード",
 
-    "tr-auto-detection": "AUTO Detection",
+    "tr-auto-detection": "自動検出",
     "tr-dhcp": "DHCP",
 
-    "tr-pppoe-credentials": "PPPoE Credentials",
-    "tr-pppoe-username": "Username",
-    "tr-pppoe-password": "Password",
+    "tr-pppoe-credentials": "PPPoE認証情報",
+    "tr-pppoe-username": "ユーザー名",
+    "tr-pppoe-password": "パスワード",
 
-    "tr-ds-lite-settings": "DS-Lite Settings",
-    "tr-dslite-aftr-type": "AFTR Type",
-    "tr-dslite-area": "Area",
-    "tr-dslite-aftr-ipv6-address": "AFTR Address",
-    "tr-dslite-notice1": "Note: Actual values may differ.",
+    "tr-dslite-settings": "DS-Lite設定",
+    "tr-dslite-aftr-type": "AFTRタイプ",
+    "tr-dslite-area": "エリア",
+    "tr-dslite-aftr-ipv6-address": "AFTRアドレス",
+    "tr-dslite-notice1": "注: 本当の値とは違う場合があります。",
 
-    "tr-mape-type": "Address Type",
-    "tr-br": "Peer Address (BR)",
-    "tr-ea-len": "EA Length",
-    "tr-ipv4-prefix": "IPv4 Address",
-    "tr-ipv4-prefix-length": "IPv4 Prefix Length",
-    "tr-ipv4-prefix-range": "IPv4 Prefix Range",
-    "tr-ipv6-prefix": "IPv6 Prefix",
-    "tr-ipv6-prefix-range": "IPv6 Prefix Range",
-    "tr-psid-offset": "PSID Offset",
-    "tr-psid-length": "PSID Length",
-    "tr-gua-prefix": "GUA Prefix",
-    "tr-mape-notice1": "Note: Actual values may differ.",
-    "tr-mape-notice2": "Note: Ports 1-1023 are privileged ports. Please check with your ISP for details.",
+    "tr-mape-type": "アドレスタイプ",
+    "tr-br": "ピアアドレス (BR)",
+    "tr-ea-len": "EA長",
+    "tr-ipv4-prefix": "IPv4アドレス",
+    "tr-ipv4-prefix-length": "IPv4プレフィックス長",
+    "tr-ipv4-prefix-range": "IPv4プレフィックスレンジ",
+    "tr-ipv6-prefix": "IPv6プレフィックス",
+    "tr-ipv6-prefix-range": "IPv6プレフィックスレンジ",
+    "tr-psid-offset": "PSIDオフセット",
+    "tr-psid-length": "PSID長",
+    "tr-gua-prefix": "GUAプレフィックス",
+    "tr-mape-notice1": "注: 本当の値とは違う場合があります。",
+    "tr-mape-notice2": "注: ポート番号 1〜1023 は特権ポートです。詳細はISPに確認して下さい。",
 
-    "tr-ap-network-settings": "AP Network Settings",
-    "tr-ap-ip-address": "IP Address",
-    "tr-ap-gateway": "Gateway",
+    "tr-ap-network-settings": "APネットワーク設定",
+    "tr-ap-ip-address": "IPアドレス",
+    "tr-ap-gateway": "ゲートウェイ",
 
-    "tr-tuning": "Tuning",
-    "tr-netopt-optimization": "Dynamic Network Optimization",
-    "tr-netopt-optimization-disabled": "Optimization Disabled",
-    "tr-manual": "Manual",
-    "tr-auto-mode": "Automatic Mode",
-    "tr-auto-optimization": "Automatic Optimization",
-    "tr-manual-mode": "Manual Mode",
-    "tr-manual-settings": "Manual Settings",
-    "tr-tcp-read-memory": "TCP Read Memory",
-    "tr-tcp-write-memory": "TCP Write Memory",
-    "tr-connection-tracking-max": "Connection Tracking Maximum",
-    "tr-network-device-backlog": "Network Device Backlog",
-    "tr-socket-max-connections": "Socket Maximum Connections",
-    "tr-tcp-congestion-control": "TCP Congestion Control",
-    "tr-cubic-default": "cubic (Default)",
+    "tr-tuning": "チューニング",
+    "tr-netopt-optimization": "動的ネットワーク最適化",
+    "tr-netopt-optimization-disabled": "最適化無効",
+    "tr-manual": "手動",
+    "tr-auto-mode": "自動モード",
+    "tr-auto-optimization": "自動最適化",
+    "tr-manual-mode": "手動モード",
+    "tr-manual-settings": "手動設定",
+    "tr-tcp-read-memory": "TCPリードメモリ",
+    "tr-tcp-write-memory": "TCPライトメモリ",
+    "tr-connection-tracking-max": "コネクショントラッキング最大値",
+    "tr-network-device-backlog": "ネットワークデバイスバックログ",
+    "tr-socket-max-connections": "ソケット最大接続数",
+    "tr-tcp-congestion-control": "TCP輻輳制御",
+    "tr-cubic-default": "cubic(デフォルト)",
     "tr-bbr": "BBR",
     "tr-reno": "Reno",
-    "tr-disabled-mode": "Disabled Mode",
-
-    "tr-basic-system-features": "Basic System Features",
-    "tr-system-management": "System Management",
-    "tr-network-management": "Network Management",
-    "tr-wifi-management": "Wi-Fi Management",
-    "tr-modem-support": "Modem Support",
-    "tr-security-tools": "Security Tools",
-    "tr-system-monitoring": "System Monitoring",
-    "tr-diagnostic-tools": "Network Diagnostic Tools",
-    "tr-system-tools": "System Administration Tools",
-    "tr-themes-dashboard": "Themes and Dashboard",
-    "tr-utilities": "Utilities",
-    "tr-usb-storage": "USB Storage Support",
-    "tr-file-sharing": "File Sharing",
-    "tr-dns-privacy": "DNS & Privacy",
+    "tr-disabled-mode": "無効モード",
     
-    "tr-dnsmasq-settings": "DNS Server Optimization",
-    "tr-dnsmasq-mode": "DNS Server Mode",
-    "tr-dnsmasq-auto": "Automatic",
-    "tr-dnsmasq-manual": "Manual",
-    "tr-dnsmasq-disabled": "Disabled",
-    "tr-dnsmasq-cache": "Cache Size",
-    "tr-dnsmasq-negcache": "Negative Cache",
-    "tr-dnsmasq-auto-optimization": "Automatic Optimization",
-    "tr-dnsmasq-optimization-disabled": "Optimization Disabled",
+    "tr-basic-system-features": "基本システム機能",
+    "tr-system-management": "システム管理",
+    "tr-network-management": "ネットワーク管理",
+    "tr-wifi-management": "Wi‑Fi管理",
+    "tr-modem-support": "モデム対応",
+    "tr-security-tools": "セキュリティツール",
+    "tr-system-monitoring": "システム監視",
+    "tr-diagnostic-tools": "ネットワーク診断ツール",
+    "tr-system-tools": "システム管理ツール",
+    "tr-themes-dashboard": "テーマとダッシュボード",
+    "tr-utilities": "ユーティリティ",
+    "tr-usb-storage": "USBストレージ対応",
+    "tr-file-sharing": "ファイル共有",
+    "tr-dns-privacy": "DNS & プライバシー",
+    
+    "tr-dnsmasq-settings": "DNS サーバー最適化",
+    "tr-dnsmasq-mode": "DNS サーバーモード",
+    "tr-dnsmasq-auto": "自動",
+    "tr-dnsmasq-manual": "手動",
+    "tr-dnsmasq-disabled": "無効",
+    "tr-dnsmasq-cache": "キャッシュサイズ",
+    "tr-dnsmasq-negcache": "ネガティブキャッシュ",
+    "tr-dnsmasq-auto-optimization": "自動最適化",
+    "tr-dnsmasq-optimization-disabled": "最適化無効",
 
-    "tr-feedback-link": "Forum",
+    "tr-feedback-link": "フォーラム",
 
-    "tr-main-menu": "Main Menu",
-    "tr-review-configuration": "Review & Apply Configuration",
-    "tr-select": "Select",
-    "tr-back": "Back",
-    "tr-exit": "Exit",
-    "tr-yes": "Yes",
-    "tr-no": "No",
+    "tr-main-menu": "メインメニュー",
+    "tr-tui-review-configuration": "設定の確認と適用",
+    "tr-select": "選択",
+    "tr-back": "戻る",
+    "tr-exit": "終了",
+    "tr-yes": "はい",
+    "tr-no": "いいえ",
     "tr-ok": "OK",
-    "tr-cancel": "Cancel",
+    "tr-cancel": "キャンセル",
     
-    "tr-view-device-info": "View Device Information",
-    "tr-view-package-list": "View Package List",
-    "tr-view-config-vars": "View Configuration Variables",
-    "tr-view-postinst": "View postinst.sh",
-    "tr-view-setup": "View setup.sh",
-    "tr-apply-config": "Apply Configuration",
-    "tr-device-information": "Device Information",
-    "tr-package-list": "Package List",
-    "tr-config-vars": "Configuration Variables",
-    "tr-no-packages": "No packages selected",
-    "tr-no-config-vars": "No configuration variables set",
-    "tr-postinst-not-found": "postinst.sh file not found",
-    "tr-setup-not-found": "setup.sh file not found",
-    "tr-apply-confirm": "Apply this configuration?\n\nThis will:\n1. Install packages via postinst.sh\n2. Apply settings via setup.sh\n3. Optionally reboot\n\nContinue?",
-    "tr-installing-packages": "Executing package installation...",
-    "tr-applying-config": "Applying system configuration...",
-    "tr-config-applied": "Configuration applied successfully!\n\nReboot now?",
-    "tr-auto-config-applied": "Auto-configuration applied!",
-    "tr-use-auto-config": "Use this auto-detected configuration?",
+    "tr-tui-view-device-info": "デバイス情報を表示",
+    "tr-tui-view-package-list": "パッケージ一覧を表示",
+    "tr-tui-view-config-vars": "設定変数を表示",
+    "tr-tui-view-postinst": "postinst.shを表示",
+    "tr-tui-view-setup": "setup.shを表示",
+    "tr-tui-apply-config": "設定を適用",
+    "tr-tui-device-information": "デバイス情報",
+    "tr-tui-package-list": "パッケージ一覧",
+    "tr-tui-config-vars": "設定変数",
+    "tr-tui-no-packages": "パッケージが選択されていません",
+    "tr-tui-no-config-vars": "設定変数がありません",
+    "tr-tui-postinst-not-found": "postinst.shファイルが見つかりません",
+    "tr-tui-setup-not-found": "setup.shファイルが見つかりません",
+    "tr-tui-apply-confirm": "この設定を適用しますか？\n\n以下を実行します：\n1. postinst.shでパッケージをインストール\n2. setup.shで設定を適用\n3. 必要に応じて再起動\n\n続行しますか？",
+    "tr-tui-installing-packages": "パッケージをインストール中...",
+    "tr-tui-applying-config": "システム設定を適用中...",
+    "tr-tui-config-applied": "設定の適用が完了しました！\n\n今すぐ再起動しますか？",
+    "tr-tui-auto-config-applied": "自動設定を適用しました！",
+    "tr-tui-use-auto-config": "この自動検出された設定を使用しますか？",
     
-    "tr-package-categories": "Package Categories",
-    "tr-select-category": "Select category:",
-    "tr-space-toggle": "Space=toggle",
+    "tr-tui-package-categories": "パッケージカテゴリ",
+    "tr-tui-select-category": "カテゴリを選択:",
+    "tr-tui-space-toggle": "スペース=切替",
     
-    "tr-ui-mode-select": "Select UI mode:",
-    "tr-ui-whiptail": "whiptail (dialog-based TUI)",
-    "tr-ui-simple": "simple (list-based TUI)",
-    "tr-ui-choice": "Choice",
-    "tr-ui-installing": "Installing whiptail...",
-    "tr-ui-install-success": "whiptail installed successfully!",
-    "tr-ui-install-failed": "Failed to install, using simple mode",
+    "tr-tui-ui-mode-select": "UIモードを選択:",
+    "tr-tui-ui-whiptail": "whiptail (ダイアログベースTUI)",
+    "tr-tui-ui-simple": "simple (リストベースTUI)",
+    "tr-tui-ui-choice": "選択",
+    "tr-tui-ui-installing": "whiptailをインストール中...",
+    "tr-tui-ui-install-success": "whiptailのインストールに成功しました！",
+    "tr-tui-ui-install-failed": "インストール失敗、simpleモードを使用します",   
     "tr-gua": "GUA",
     "tr-pd": "PD"
 }
