--- a/www/langs/custom.en.json
+++ b/www/langs/custom.en.json
@@ -143,7 +143,6 @@
     "tr-feedback-link": "Forum",
 
     "tr-main-menu": "Main Menu",
-    "tr-review-configuration": "Review & Apply Configuration",
     "tr-select": "Select",
     "tr-back": "Back",
     "tr-exit": "Exit",
@@ -152,37 +151,37 @@
     "tr-ok": "OK",
     "tr-cancel": "Cancel",
     
-    "tr-view-device-info": "View Device Information",
-    "tr-view-package-list": "View Package List",
-    "tr-view-config-vars": "View Configuration Variables",
-    "tr-view-postinst": "View postinst.sh",
-    "tr-view-setup": "View setup.sh",
-    "tr-apply-config": "Apply Configuration",
-    "tr-device-information": "Device Information",
-    "tr-package-list": "Package List",
-    "tr-config-vars": "Configuration Variables",
-    "tr-no-packages": "No packages selected",
-    "tr-no-config-vars": "No configuration variables set",
-    "tr-postinst-not-found": "postinst.sh file not found",
-    "tr-setup-not-found": "setup.sh file not found",
-    "tr-apply-confirm": "Apply this configuration?\n\nThis will:\n1. Install packages via postinst.sh\n2. Apply settings via setup.sh\n3. Optionally reboot\n\nContinue?",
-    "tr-installing-packages": "Executing package installation...",
-    "tr-applying-config": "Applying system configuration...",
-    "tr-config-applied": "Configuration applied successfully!\n\nReboot now?",
-    "tr-auto-config-applied": "Auto-configuration applied!",
-    "tr-use-auto-config": "Use this auto-detected configuration?",
+    "tr-tui-review-configuration": "Review & Apply Configuration",
+    "tr-tui-view-device-info": "View Device Information",
+    "tr-tui-view-package-list": "View Package List",
+    "tr-tui-view-config-vars": "View Configuration Variables",
+    "tr-tui-view-postinst": "View postinst.sh",
+    "tr-tui-view-setup": "View setup.sh",
+    "tr-tui-apply-config": "Apply Configuration",
+    "tr-tui-device-information": "Device Information",
+    "tr-tui-package-list": "Package List",
+    "tr-tui-config-vars": "Configuration Variables",
+    "tr-tui-no-packages": "No packages selected",
+    "tr-tui-no-config-vars": "No configuration variables set",
+    "tr-tui-postinst-not-found": "postinst.sh file not found",
+    "tr-tui-setup-not-found": "setup.sh file not found",
+    "tr-tui-apply-confirm": "Apply this configuration?\n\nThis will:\n1. Install packages via postinst.sh\n2. Apply settings via setup.sh\n3. Optionally reboot\n\nContinue?",
+    "tr-tui-installing-packages": "Executing package installation...",
+    "tr-tui-applying-config": "Applying system configuration...",
+    "tr-tui-config-applied": "Configuration applied successfully!\n\nReboot now?",
+    "tr-tui-auto-config-applied": "Auto-configuration applied!",
+    "tr-tui-use-auto-config": "Use this auto-detected configuration?",
+    "tr-tui-package-categories": "Package Categories",
+    "tr-tui-select-category": "Select category:",
+    "tr-tui-space-toggle": "Space=toggle",
     
-    "tr-package-categories": "Package Categories",
-    "tr-select-category": "Select category:",
-    "tr-space-toggle": "Space=toggle",
-    
-    "tr-ui-mode-select": "Select UI mode:",
-    "tr-ui-whiptail": "whiptail (dialog-based TUI)",
-    "tr-ui-simple": "simple (list-based TUI)",
-    "tr-ui-choice": "Choice",
-    "tr-ui-installing": "Installing whiptail...",
-    "tr-ui-install-success": "whiptail installed successfully!",
-    "tr-ui-install-failed": "Failed to install, using simple mode",
+    "tr-tui-ui-mode-select": "Select UI mode:",
+    "tr-tui-ui-whiptail": "whiptail (dialog-based TUI)",
+    "tr-tui-ui-simple": "simple (list-based TUI)",
+    "tr-tui-ui-choice": "Choice",
+    "tr-tui-ui-installing": "Installing whiptail...",
+    "tr-tui-ui-install-success": "whiptail installed successfully!",
+    "tr-tui-ui-install-failed": "Failed to install, using simple mode",
     "tr-gua": "GUA",
     "tr-pd": "PD"
 }
