--- a/www/langs/custom.de.json
+++ b/www/langs/custom.de.json
@@ -122,5 +122,46 @@
   "tr-dnsmasq-negcache": "Negativer Cache",
   "tr-dnsmasq-auto-optimization": "Auto-Optimierung",
   "tr-dnsmasq-optimization-disabled": "Optimierung deaktiviert",
-  "tr-feedback-link": "Forum"
+  "tr-feedback-link": "Forum",
+
+  "tr-tui-main-menu": "Hauptmenü",
+  "tr-tui-select": "Auswählen",
+  "tr-tui-back": "Zurück",
+  "tr-tui-exit": "Beenden",
+  "tr-tui-yes": "Ja",
+  "tr-tui-no": "Nein",
+  "tr-tui-ok": "OK",
+  "tr-tui-cancel": "Abbrechen",
+  "tr-tui-review-configuration": "Konfiguration prüfen & anwenden",
+  "tr-tui-view-device-info": "Geräteinformationen anzeigen",
+  "tr-tui-view-package-list": "Paketliste anzeigen",
+  "tr-tui-view-config-vars": "Konfigurationsvariablen anzeigen",
+  "tr-tui-view-postinst": "postinst.sh anzeigen",
+  "tr-tui-view-setup": "setup.sh anzeigen",
+  "tr-tui-apply-config": "Konfiguration anwenden",
+  "tr-tui-device-information": "Geräteinformationen",
+  "tr-tui-package-list": "Paketliste",
+  "tr-tui-config-vars": "Konfigurationsvariablen",
+  "tr-tui-no-packages": "Keine Pakete ausgewählt",
+  "tr-tui-no-config-vars": "Keine Konfigurationsvariablen gesetzt",
+  "tr-tui-postinst-not-found": "postinst.sh Datei nicht gefunden",
+  "tr-tui-setup-not-found": "setup.sh Datei nicht gefunden",
+  "tr-tui-apply-confirm": "Diese Konfiguration anwenden?\n\nDies wird:\n1. Pakete via postinst.sh installieren\n2. Einstellungen via setup.sh anwenden\n3. Optional neustarten\n\nFortfahren?",
+  "tr-tui-installing-packages": "Paketinstallation wird ausgeführt...",
+  "tr-tui-applying-config": "Systemkonfiguration wird angewendet...",
+  "tr-tui-config-applied": "Konfiguration erfolgreich angewendet!\n\nJetzt neu starten?",
+  "tr-tui-auto-config-applied": "Auto-Konfiguration angewendet!",
+  "tr-tui-use-auto-config": "Diese automatisch erkannte Konfiguration verwenden?",
+  "tr-tui-package-categories": "Paketkategorien",
+  "tr-tui-select-category": "Kategorie auswählen:",
+  "tr-tui-space-toggle": "Leertaste=umschalten",
+  "tr-tui-ui-mode-select": "UI-Modus auswählen:",
+  "tr-tui-ui-whiptail": "whiptail (dialogbasiertes TUI)",
+  "tr-tui-ui-simple": "simple (listenbasiertes TUI)",
+  "tr-tui-ui-choice": "Auswahl",
+  "tr-tui-ui-installing": "whiptail wird installiert...",
+  "tr-tui-ui-install-success": "whiptail erfolgreich installiert!",
+  "tr-tui-ui-install-failed": "Installation fehlgeschlagen, verwende einfachen Modus",
+  "tr-tui-gua": "GUA",
+  "tr-tui-pd": "PD"
 }
