--- a/www/langs/custom.id.json
+++ b/www/langs/custom.id.json
@@ -122,5 +122,46 @@
   "tr-dnsmasq-negcache": "Cache Negatif",
   "tr-dnsmasq-auto-optimization": "Optimasi Otomatis",
   "tr-dnsmasq-optimization-disabled": "Optimasi Dinonaktifkan",
-  "tr-feedback-link": "Forum"
+  "tr-feedback-link": "Forum",
+
+  "tr-tui-main-menu": "Menu Utama",
+  "tr-tui-select": "Pilih",
+  "tr-tui-back": "Kembali",
+  "tr-tui-exit": "Keluar",
+  "tr-tui-yes": "Ya",
+  "tr-tui-no": "Tidak",
+  "tr-tui-ok": "OK",
+  "tr-tui-cancel": "Batal",
+  "tr-tui-review-configuration": "Tinjau & Terapkan Konfigurasi",
+  "tr-tui-view-device-info": "Lihat Informasi Perangkat",
+  "tr-tui-view-package-list": "Lihat Daftar Paket",
+  "tr-tui-view-config-vars": "Lihat Variabel Konfigurasi",
+  "tr-tui-view-postinst": "Lihat postinst.sh",
+  "tr-tui-view-setup": "Lihat setup.sh",
+  "tr-tui-apply-config": "Terapkan Konfigurasi",
+  "tr-tui-device-information": "Informasi Perangkat",
+  "tr-tui-package-list": "Daftar Paket",
+  "tr-tui-config-vars": "Variabel Konfigurasi",
+  "tr-tui-no-packages": "Tidak ada paket yang dipilih",
+  "tr-tui-no-config-vars": "Tidak ada variabel konfigurasi yang diatur",
+  "tr-tui-postinst-not-found": "File postinst.sh tidak ditemukan",
+  "tr-tui-setup-not-found": "File setup.sh tidak ditemukan",
+  "tr-tui-apply-confirm": "Terapkan konfigurasi ini?\n\nIni akan:\n1. Instal paket via postinst.sh\n2. Terapkan pengaturan via setup.sh\n3. Opsional restart\n\nLanjutkan?",
+  "tr-tui-installing-packages": "Menjalankan instalasi paket...",
+  "tr-tui-applying-config": "Menerapkan konfigurasi sistem...",
+  "tr-tui-config-applied": "Konfigurasi berhasil diterapkan!\n\nRestart sekarang?",
+  "tr-tui-auto-config-applied": "Konfigurasi otomatis diterapkan!",
+  "tr-tui-use-auto-config": "Gunakan konfigurasi yang terdeteksi otomatis ini?",
+  "tr-tui-package-categories": "Kategori Paket",
+  "tr-tui-select-category": "Pilih kategori:",
+  "tr-tui-space-toggle": "Spasi=toggle",
+  "tr-tui-ui-mode-select": "Pilih mode UI:",
+  "tr-tui-ui-whiptail": "whiptail (TUI berbasis dialog)",
+  "tr-tui-ui-simple": "simple (TUI berbasis daftar)",
+  "tr-tui-ui-choice": "Pilihan",
+  "tr-tui-ui-installing": "Menginstal whiptail...",
+  "tr-tui-ui-install-success": "whiptail berhasil diinstal!",
+  "tr-tui-ui-install-failed": "Gagal menginstal, menggunakan mode sederhana",
+  "tr-tui-gua": "GUA",
+  "tr-tui-pd": "PD"
 }
