--- a/www/langs/custom.ru.json
+++ b/www/langs/custom.ru.json
@@ -122,5 +122,46 @@
   "tr-dnsmasq-negcache": "Отрицательный кэш",
   "tr-dnsmasq-auto-optimization": "Автоматическая оптимизация",
   "tr-dnsmasq-optimization-disabled": "Оптимизация отключена",
-  "tr-feedback-link": "Форум"
+  "tr-feedback-link": "Форум",
+
+  "tr-tui-main-menu": "Главное меню",
+  "tr-tui-select": "Выбрать",
+  "tr-tui-back": "Назад",
+  "tr-tui-exit": "Выход",
+  "tr-tui-yes": "Да",
+  "tr-tui-no": "Нет",
+  "tr-tui-ok": "OK",
+  "tr-tui-cancel": "Отмена",
+  "tr-tui-review-configuration": "Проверить и применить конфигурацию",
+  "tr-tui-view-device-info": "Просмотреть информацию об устройстве",
+  "tr-tui-view-package-list": "Просмотреть список пакетов",
+  "tr-tui-view-config-vars": "Просмотреть переменные конфигурации",
+  "tr-tui-view-postinst": "Просмотреть postinst.sh",
+  "tr-tui-view-setup": "Просмотреть setup.sh",
+  "tr-tui-apply-config": "Применить конфигурацию",
+  "tr-tui-device-information": "Информация об устройстве",
+  "tr-tui-package-list": "Список пакетов",
+  "tr-tui-config-vars": "Переменные конфигурации",
+  "tr-tui-no-packages": "Пакеты не выбраны",
+  "tr-tui-no-config-vars": "Переменные конфигурации не установлены",
+  "tr-tui-postinst-not-found": "Файл postinst.sh не найден",
+  "tr-tui-setup-not-found": "Файл setup.sh не найден",
+  "tr-tui-apply-confirm": "Применить эту конфигурацию?\n\nЭто:\n1. Установит пакеты через postinst.sh\n2. Применит настройки через setup.sh\n3. По желанию перезагрузит систему\n\nПродолжить?",
+  "tr-tui-installing-packages": "Выполняется установка пакетов...",
+  "tr-tui-applying-config": "Применяется конфигурация системы...",
+  "tr-tui-config-applied": "Конфигурация успешно применена!\n\nПерезагрузить сейчас?",
+  "tr-tui-auto-config-applied": "Автоматическая конфигурация применена!",
+  "tr-tui-use-auto-config": "Использовать эту автоматически определенную конфигурацию?",
+  "tr-tui-package-categories": "Категории пакетов",
+  "tr-tui-select-category": "Выберите категорию:",
+  "tr-tui-space-toggle": "Пробел=переключить",
+  "tr-tui-ui-mode-select": "Выберите режим UI:",
+  "tr-tui-ui-whiptail": "whiptail (диалоговый TUI)",
+  "tr-tui-ui-simple": "simple (списочный TUI)",
+  "tr-tui-ui-choice": "Выбор",
+  "tr-tui-ui-installing": "Установка whiptail...",
+  "tr-tui-ui-install-success": "whiptail успешно установлен!",
+  "tr-tui-ui-install-failed": "Не удалось установить, используется простой режим",
+  "tr-tui-gua": "GUA",
+  "tr-tui-pd": "PD"
 }
